# File-Manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  Search Algorithm.sln
File Manager/examples/: main.cpp
File Manager/include/: Finder.h
File Manager/include/finder/search/: Search.h
FileManager/: CMakeLists.txt
FileManager/examples/: main.cpp
FileManager/include/finder/: Finder.h
FileManager/include/finder/emlreader/: EMLReader.h
FileManager/include/finder/encryption/: base64.h
FileManager/include/finder/search/: Search.h
FileManager/include/finder/utils/: Line.h  envreader.h
FileManager/src/: entry.cpp
FileManager/src/emlreader/: EMLReader.cpp
FileManager/src/search/: Search.cpp
FileManager/src/utils/: envreader.cpp
Search Algorithm/include/finder/emlreader/: EMLReader.h
Search Algorithm/include/finder/utils/: Line.h
Search Algorithm/src/emlreader/: EMLReader.cpp
Search Algorithm/src/search/: Search.cpp
Visual Studio/: File Manager.filters  File Manager.sln  File Manager.vcxproj
